# JContainersNG-Source

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: FormSerializer.hpp  JContainersNG_Natives.cpp  JsonSerializer.hpp  ObjectManager.hpp  Serialization.cpp  plugin.cpp
src/api_3/: JContainersNG_Natives.hpp  JContainersNG_Natives_JAtomic.cpp  JContainersNG_Natives_JContainers.cpp  JContainersNG_Natives_JValue.cpp
src/collections/: JContainersNG_Natives_JArray.cpp  JContainersNG_Natives_JFormMap.cpp  JContainersNG_Natives_JIntMap.cpp  JContainersNG_Natives_JMap.cpp
src/domains/: JContainersNG_Natives_JDB.cpp  JContainersNG_Natives_JFormDB.cpp
src/forms/: FormSerializer.hpp  JContainersNG_Natives_JString.cpp
src/object/: JContainersNG_AutoreleaseQueue.hpp  ObjectManager.hpp
src/reflection/: JContainersNG_Lua.cpp  JContainersNG_Natives_JLua.cpp
src/skse/: Serialization.cpp  plugin.cpp
src/util/: JContainersNG_Internal.cpp  JContainersNG_Internal.hpp  JsonSerializer.hpp  PCH.h
